# rl_new_pokemon_ai

./: .gimodules  .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  run_rom.sh
.trunk/: logs  notifications  out  tools
Poke/.obsidian/: workspace.json
data/: data_scrap_from_mgba
data/csv_data/: moves_data.csv  pokemon_data.csv
data/maps/InsideOfTruck/: map.json
example/: example.py  export.ipynb  gba_arcade.py  training.ipynb
include/constants/: trainers.h
pkmn_rl_arena/: __init__.py  logging.py
pkmn_rl_arena/data/: parser.py
pkmn_rl_arena/env/: README.md  action.py  arena.py  battle_core.py  battle_state.py  benchmark.py  core.py  episode.py  observation.py  pkmn_team_factory.py  pokemon_rl_core.py  reward_manager.py  save_state.py  turn_manager.py
pkmn_rl_arena/env/tests/: tests.py
pkmn_rl_arena/export/export_core/: exporter_factory.py  memory_allocator.py
pkmn_rl_arena/export/exporters/: parameters.py
pkmn_rl_arena/quantize/: quantize.py
pokeemerald/: Makefile  README.md  mgba.sh
pokeemerald/.trunk/: actions
src/: __init__.py  intro.c  main_menu.c
src/data/: pokemon_scrap.py  trainers.h
src/env/: benchmark.py  core.py
src/export/: __init__.py  base.py  enums.py  export.py  onnx_exporter.py  onnx_graph.py
src/quantize/: quantize.py
src/rl_new_pokemon_ai/: __init__.py  logging.py
src/utils/: logging.py
test/: ObservationManager.py  PettingZooEnv.py  test_pettingZooEnv.py
tests/: test_PkmnRLCore.py  test_export.py  test_pettingzoo_env.py  test_rustboyadvance_py.py
utils/: benchmark.py  core.py  parser.py  pokemon_data.py  pokemon_scrap.py
utils/unit_tests/: rl_core_unit-tests.py  tests.py
(+52 files in other folders)
