[project]
name = "rl_new_pokemon_ai"
version = "0.1.0"
description = "Reinforcement learning and exporting neural networks"
authors = [{ name = "Wissam Boussella", email = "wissamboussella@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "torch",
    "onnx",
    "onnxruntime",
    "rich",
    "maturin"
]

[tool.setuptools]
package-dir = {"" = "src"}
