[project]
name = "rl_new_pokemon_ai"
version = "0.1.0"
description = "Reinforcement learning and exporting neural networks"
authors = [{ name = "Wissam Boussella", email = "wissamboussella@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "torch",
    "onnx",
    "onnxruntime",
    "rich",
    "maturin",
    "pettingzoo>=1.25.0",
    "gymnasium>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.setuptools]
package-dir = {"" = "src"}
